feat: implementar workflow do dossie produto
Adiciona o endpoint POST /arvore-documento/v1/dossie-produto/{id}/workflow com fluxo resource-service-gateway-client, mock runtime/documental e cobertura de testes.

Registra o planejamento aprovado e ajusta o build de testes para carregar Mockito como javaagent no Surefire.